--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -53,7 +53,13 @@
             <h1 class="text-warning"> <span class="typing" data-text="{{ hero.subtitle }}"> {{ hero.subtitle|safe }}</span></h1>
             <p class="text-secondary">{{ hero.description|safe  }}</p>
             {% endif %}
-            <a href="#about-me" class="btn btn-outline-info " id="about-me-button">About Me</a>
+            {% if cv %}
+            <a href="{{ cv.file.url }}" target="_blank" class="btn btn-outline-info" id="cv-view-button">
+                CV View
+            </a>
+            {% else %}
+            <a  class="btn btn-outline-info" id="cv-view-button">No CV uploaded yet</a>
+            {% endif %}
         </div>
     </div>
 </section>
